--- a/cyber.html
+++ b/cyber.html
@@ -2,7 +2,7 @@
 <div style="display: flex; justify-content: space-between; flex-wrap: wrap; box-sizing: border-box; background-color:darkcyan; align-items: center;">
     <label style="color: blue; padding: 0px; margin: 10px; top: 0px; left: 0px; z-index: 999; font-size: 25px; text-align: left;">Zakariyyah Salat</label>
     <div style="text-align: right;">
-        <a href="gaming.html">
+        <a href="index.html">
         <button style="color:blueviolet; background-color: hsl(180, 100%, 97%, 0.2); top: 0px; right: 0px; font-family: 'Fredoka One'; border: 0px; border-radius: 5px; height: auto; width: auto; margin: 10px; padding: 0; font-size:larger;">About Me</button>
     </a>
         <a href="summer.html">
@@ -19,4 +19,5 @@
 
 
 </div>
+
 </body>
